--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MONGODB=mongodb+srv://<username>:<password>@cluster0.zb36i.mongodb.net/<database>?retryWrites=true&w=majority
+MONGODB=mongodb://localhost:27017/test
