--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js", 
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest --forceExit --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "Felipe Pires Soares",
@@ -19,7 +19,9 @@
     "mongoose": "^6.7.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
   }
