--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "dev": "nodemon src/app.js --ignore tests",
     "test": "jest --forceExit --runInBand --detectOpenHandles"
   },
   "keywords": [],
