--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "backend",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js --ignore tests",
-    "test": "jest --forceExit --runInBand --detectOpenHandles"
+    "dev": " nodemon src/app.js --ignore tests",
+    "test": "cross-env NODE_ENV=test jest --forceExit --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "Felipe Pires Soares",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.3.1",
     "mongodb-memory-server": "^8.10.0",
     "nodemon": "^2.0.20",
